--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -127,3 +127,15 @@
     flex-direction: column;
   }
 }
+
+.button {
+  color: white;
+  font-family: inherit;
+  font-size: 0.9em;
+  background-color: blueviolet;
+  padding: 0.8em 1.4em;
+  border-radius: 0.2em;
+  border: 0;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+  cursor: pointer;
+}
